--- a/News_Application/style.css
+++ b/News_Application/style.css
@@ -3,3 +3,67 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+:root {
+  --primary-background-color: rgb(43, 42, 51);
+  --secondary-background-color: rgba(66, 65, 77, 1);
+  --primary-text-color: rgba(251, 251, 254, 1);
+  --button-color: rgb(25, 25, 148);
+}
+
+body {
+  background-color: var(--primary-background-color);
+  color: var(--primary-text-color);
+  font-family: "Montserrat", sans-serif;
+}
+
+.navbar {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: var(--secondary-background-color);
+}
+
+.logo img {
+  height: 90px;
+  aspect-ratio: 3/2;
+  object-fit: contain;
+}
+
+a {
+  text-decoration: none;
+}
+
+.navbar ul {
+  list-style: none;
+}
+
+.nav-items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+  font-size: 18px;
+}
+
+.search input {
+  height: 32px;
+  width: 270px;
+  border: none;
+  border-radius: 10px;
+  padding: 0 10px;
+  outline: none;
+}
+
+.search button {
+  padding: 8px 14px;
+  font-size: 15px;
+  margin-left: 8px;
+  border-radius: 12px;
+  border: none;
+  background-color: var(--button-color);
+  color: var(--primary-text-color);
+}
