--- a/News_Application/style.css
+++ b/News_Application/style.css
@@ -25,6 +25,11 @@ body {
   align-items: center;
   justify-content: space-around;
   background-color: var(--secondary-background-color);
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  z-index: 99;
 }
 
 .logo img {
@@ -56,6 +61,11 @@ a {
   border-radius: 10px;
   padding: 0 10px;
   outline: none;
+  font-family: "Montserrat", sans-serif;
+}
+
+.search input {
+  font-size: 18px;
 }
 
 .search button {
@@ -66,4 +76,57 @@ a {
   border: none;
   background-color: var(--button-color);
   color: var(--primary-text-color);
+  font-family: "Montserrat", sans-serif;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: rgb(64, 64, 182);
+}
+
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 95px;
+  margin-inline: 195px;
+}
+
+.card-item {
+  background: var(--secondary-background-color);
+  border-radius: 13px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  max-width: 300px;
+  max-height: 600px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  margin-bottom: 17px;
+  transition: all 0.3s ease;
+}
+
+.card-item :hover {
+  transform: translateY(1px);
+  box-shadow: 0 0px 2px rgba(0, 0, 0, 0.6);
+  background-color: rgb(99, 102, 112);
+}
+
+.card-header img {
+  height: 150px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 7px;
+}
+.description {
+  padding: 18px;
+}
+
+.description h3 {
+  margin-bottom: 14px;
+}
+
+.publisher {
+  margin-bottom: 10px;
 }
