--- a/News_Application/style.css
+++ b/News_Application/style.css
@@ -99,7 +99,7 @@ button:hover {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   display: flex;
   flex-direction: column;
-  position: relative;
+  /* position: relative; */
   max-width: 300px;
   max-height: 600px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
