--- a/News_Application/style.css
+++ b/News_Application/style.css
@@ -99,9 +99,9 @@ button:hover {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   display: flex;
   flex-direction: column;
-  /* position: relative; */
   max-width: 300px;
-  max-height: 600px;
+  max-height: 350px;
+  overflow: hidden;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   margin-bottom: 17px;
   transition: all 0.3s ease;
@@ -133,4 +133,25 @@ button:hover {
 
 .active {
   color: rgb(140, 140, 237);
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  padding: 12px;
+}
+
+footer :first-child {
+  padding: 12px;
+}
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #ddd;
 }
